web/assets/style/spotdesk.css
html, body {
    font-family: 'Roboto', sans-serif;
    font-size:14px;
    height:100%;
    margin: 0px;
    padding: 0px;
}

#login {
    width: 100%;
    max-width: 500px;
    margin: 1em auto;
}

.menu {
    background-color: transparent;
    border: none;
    min-height: unset;
    min-width: unset;
    margin: 16px;
    width: 36px;
}

md-toolbar .fa {
    font-size: 24px;
    vertical-align: middle;
}

md-toolbar h1 {
    font-size: 1.250em;
    margin: auto 16px;
    font-weight: 500;
}

/* Sidenav area */

md-sidenav md-list-item > .md-button {
    width: 100%;
    text-align: left !important;
}

md-sidenav md-list .md-button.selected {
    color: #03a9f4;
}

md-sidenav md-list {
    padding: 0px 0px 8px 0px;
}

/* Primary content area */

#content {
    overflow: hidden;
}

#content  {
    padding-left: 40px;
    padding-right: 40px;
    padding-top: 5px;
}

#content .md-button.share {
    background-color: transparent;
    border: none;
    width: 48px;
    height: 48px;
    margin: 8px auto 16px 0;
    position: absolute;
    top: 10px;
    right: 25px;
}

#content md-icon.avatar {
    margin-top: 10px;
}

#content .md-button.share > md-icon {
    fill:black;
    width:36px;
    height:36px;
}

md-button.menuBtn > md-icon {
    fill:white;
    width:24px;
    height:24px;
}

#content .md-button.share:active > md-icon {
    background-color: #dadada;
    border-radius: 75%;
    padding:4px;
    transition: all 100ms ease-out 30ms;
}

#content img {
    display: block;
    height: auto;
    max-width: 500px;
}

/* Utils */

.content-wrapper {
    position: relative;
}

/* Typography support coming in 0.8.0 */

.avatar {
    position: relative;
    width: 128px;
    height: 128px;
    border: 1px solid #ddd;
    border-radius: 50%;
    display: inline-block;
    overflow: hidden;
    margin: 0;
    vertical-align: middle;
    font-size: 90px;
    line-height: 1.4em;
    text-align: center;
    zoom:0.70;
    transform: translateZ(0);
    -webkit-transform: scale(0.70);
    -moz-transform:scale(0.70);
}

md-bottom-sheet  md-icon {
    margin-right:20px;
}

span.name {
    font-weight: bold;
    font-size:1.1em;
    padding-left:5px;
}

